--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
     "sass": "^1.79.3",
     "tslib": "^2.3.0",
