--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,13 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              
               }
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-               "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+                "node_modules/bootstrap/scss/bootstrap.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
