--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
     "sass": "^1.79.3",
